--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ pytest==6.1.1
 pytest-cov==2.10.1
 pytest-flask==1.0.0
 pytest-mongodb==2.2.0
+pytz==2020.4
 PyYAML==5.3.1
 sentinels==1.0.0
 six==1.15.0
